Fix autowired violations.